# tp-lab-5

./: CMakeLists.txt  students.txt
.github/workflows/: cpplint.yml  release.yml
data/: students.txt
include/: Data.h  Deanary.h  Deanery.h  Group.h  Reader.h  Student.h  data.h
include/reader/: Reader.h
src/: CMakeLists.txt  Data.cpp  Deanary.cpp  Deanery.cpp  Group.cpp  Reader.cpp  Student.cpp  data.cpp  groups.json  main.cpp  specList.txt  students.txt
src/data/: groups.json  students.json
test/: CMakeLists.txt  tests.cpp
